[package]

name          = "mio"
# When releasing to crates.io:
# - Update html_root_url.
# - Update CHANGELOG.md.
# - Update doc URL.
# - Create git tag
version       = "0.6.22"
license       = "MIT"
authors       = ["Carl Lerche <me@carllerche.com>"]
description   = "Lightweight non-blocking IO"
documentation = "https://docs.rs/mio/0.6.22/mio/"
homepage      = "https://github.com/tokio-rs/mio"
repository    = "https://github.com/tokio-rs/mio"
readme        = "README.md"
keywords      = ["io", "async", "non-blocking"]
categories    = ["asynchronous"]
include       = [
  "Cargo.toml",
  "LICENSE",
  "README.md",
  "CHANGELOG.md",
  "src/**/*.rs"
]

[features]
with-deprecated = []
default = ["with-deprecated"]

[dependencies]
log      = "0.4"
slab     = "0.4.0"
iovec    = "0.1.1"
cfg-if   = "0.1.9"

[target.'cfg(not(target_env = "sgx"))'.dependencies]
net2 = "0.2.29"

[target.'cfg(target_os = "fuchsia")'.dependencies]
fuchsia-zircon = "0.3.2"
fuchsia-zircon-sys = "0.3.2"

[target.'cfg(unix)'.dependencies]
libc   = "0.2.54"

[target.'cfg(windows)'.dependencies]
winapi = "0.2.6"
miow   = "0.2.1"
kernel32-sys = "0.2"

[target.x86_64-fortanix-unknown-sgx.dependencies]
async-usercalls = { git = "https://github.com/fortanix/rust-sgx.git", branch = "mz/async-usercalls" } # FIXME: use published version once available
lazy_static = "1.4.0"
crossbeam-channel = "0.4"

[dev-dependencies]
env_logger = { version = "0.4.0", default-features = false }
tempdir    = "0.3.4"
bytes      = "0.3.0"

[[test]]
name = "test"
path = "test/mod.rs"

# set number of threads so tests can run properly
[package.metadata.fortanix-sgx]
threads=100
